Bug #13428
rdsv3: symbol 'rdsv3_one_sec_in_hz' is multiply-defined
Start date:
Due date:
% Done:
90%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/rdsv3_ddi.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/bind.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/loop.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/threads.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/connection.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/transport.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/cong.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/message.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/rds_recv.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/send.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/stats.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/info.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/page.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/rdma_transport.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/ib_ring.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/ib_rdma.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/ib_recv.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/ib.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/ib_send.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/ib_sysctl.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/ib_stats.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/ib_cm.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/rdsv3_impl.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/rdma.o type=OBJT); ld: fatal: symbol 'rdsv3_one_sec_in_hz' is multiply-defined: (file obj64/af_rds.o type=OBJT; file obj64/rdsv3_af_thr.o type=OBJT); ld: fatal: file processing errors. No output written to obj64/rdsv3 *** Error code 1 dmake: Fatal error: Command failed for target `obj64/rdsv3' Current working directory /code/illumos-gate/usr/src/uts/intel/rdsv3