13428 rdsv3: symbol 'rdsv3_one_sec_in_hz' is multiply-defined Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>